Stops the clear search text wrapping on tablet

--- a/less/widget-button.less
+++ b/less/widget-button.less
@@ -132,6 +132,7 @@ button.contactform__button {
 
 .button.button--clear {
 	margin-left: 20px;
+	white-space: nowrap;
 	&:before {
 		content: "\f00d";
 		padding-right: 1.2rem;
